Add license and description metadata
Signed-off-by: Patrick Uiterwijk <patrick@puiterwijk.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "tpm2-policy"
+description = "Specify and send TPM2 policies to satisfy object authorization"
 version = "0.1.0"
 authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
 edition = "2018"
+license = "EUPL-1.2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
