--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tpm2-policy"
 description = "Specify and send TPM2 policies to satisfy object authorization"
-version = "0.3.1"
+version = "0.4.0"
 authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
 edition = "2018"
 homepage = "https://github.com/fedora-iot/rust-tpm2-policy"
@@ -10,7 +10,7 @@ license = "EUPL-1.2"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tss-esapi = "4.0.10-alpha.1"
+tss-esapi = "5.0"
 serde = "1.0"
 base64 = "0.12.1"
 
